--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:2.3.2'
         classpath 'com.dicedmelon.gradle:jacoco-android:0.1.1'
 
         classpath 'com.novoda:bintray-release:0.3.4'
@@ -21,7 +21,7 @@ allprojects {
         publish_version = '1.7.0'
 
         //dependencies version
-        kotlin_version = '1.1.2'
+        kotlin_version = '1.1.2-3'
         result_version = '1.1.0'
         rxjava_version = '2.1.0'
 
@@ -36,5 +36,6 @@ allprojects {
 
     repositories {
         jcenter()
+        maven { url "https://maven.google.com" }
     }
 }
